--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,14 +11,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.kenny.loadingdemo.activities.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="" />
-
     <com.kenny.loadingdemo.customView.BottleLoading
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:textContent="LOADING"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        app:textContent="LOADING" />
+
+    <com.kenny.loadingdemo.customView.GhostLoadingView
+        android:id="@+id/loading_ghost"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        app:breedTime="2000"
+        app:eyesSize="20"
+        app:eyesColor="@color/colorAccent"
+        app:shadowColor="@android:color/holo_orange_dark" />
+
 </RelativeLayout>
